[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Spritesheets/shrine_guardian_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound/Sound_Effects/enemy_hurt.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Graphics/Spritesheets/smoke_effect_spritesheet.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.5682

[sub_resource type="CircleShape2D" id=2]
radius = 222.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 23 )

[sub_resource type="Animation" id=4]
resource_name = "Move"
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Take Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtSound2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Teleport"
length = 0.4
step = 0.036
tracks/0/type = "value"
tracks/0/path = NodePath("SmokeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.036, 0.072, 0.108, 0.144, 0.18, 0.216, 0.252, 0.288, 0.324, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmokeSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.396 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 3 )
random_pitch = 1.25

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
current_health = 2
max_health = 3
current_speed = 50

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 6
frame = 3

[node name="SmokeSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
hframes = 11
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="CreatureDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CreatureDetectionZone"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 1.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Move"
anims/Move = SubResource( 4 )

[node name="AnimationPlayerDamage" type="AnimationPlayer" parent="."]
"anims/Take Damage" = SubResource( 5 )
anims/Teleport = SubResource( 6 )

[node name="TargetPosition" type="Position2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HurtTargetTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtSound2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 7 )
bus = "Sound Effects"

[connection signal="body_entered" from="CreatureDetectionZone" to="." method="_on_CreatureDetectionZone_body_entered"]
[connection signal="body_exited" from="CreatureDetectionZone" to="." method="_on_CreatureDetectionZone_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_HurtBox_body_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="HurtTargetTimer" to="." method="_on_HurtTargetTimer_timeout"]
